@@ -1542,13 +1542,9 @@ around _add_resources => sub {
   foreach my $pair (sort { $a->[0] cmp $b->[0] } pairs @_) {
     my ($key, $value) = @$pair;
     if (my $existing = $self->_get_resource($key)) {
-      if ($key eq '') {
-        # we allow overwriting canonical_uri = '' to allow for ad hoc evaluation of schemas that
-        # lack all identifiers altogether; we drop *all* resources from that document
-        $self->_remove_resource(
-          grep $self->_get_resource($_)->{document} == $existing->{document}, $self->_resource_keys);
-      }
-      else {
+      # we allow overwriting canonical_uri = '' to allow for ad hoc evaluation of schemas that
+      # lack all identifiers altogether, but preserve other resources from the original document
+      if ($key ne '') {
         next if $existing->{path} eq $value->{path}
           and $existing->{canonical_uri} eq $value->{canonical_uri}
           and $existing->{document} == $value->{document};
